--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <version>1.18.16</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -103,5 +104,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
